# nifi-runner

./: Cargo.toml  README.md  input.ttl  ontology.ttl
channels/: HTTPPostReader.xml  HTTPPostWriter.xml  WSReader.xml  WSWriter.xml  http_ontology.ttl  ws_ontology.ttl
derive/: Cargo.toml
derive/src/: lib.rs
src/: app.rs  client.rs  logic.rs  main.rs  models.rs  rdf.rs  sparql.rs  util.rs
src/logic/: logic.rs  mod.rs  reader.rs  writer.rs
